force-app/main/default/objects/Exemption_Type__c/Exemption_Type__c.object-meta.xml
<CustomObject>
    <label>Exemption Type</label>
    <nameField>
        <label>Exemption Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exemption Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>