force-app/main/default/objects/Exemption_Type__c/fields/AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformation__c</fullName>
    <label>Additional Information</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>