force-app/main/default/objects/Exemption_Type__c/fields/Hint_Text__c.field-meta.xml
<CustomField>
    <fullName>Hint_Text__c</fullName>
    <description>Hint text for Exemption Type</description>
    <label>Hint Text</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>