force-app/main/default/objects/Exemption_Type__c/fields/IsCommercial__c.field-meta.xml
<CustomField>
    <fullName>IsCommercial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCommercial</label>
    <type>Checkbox</type>
</CustomField>