force-app/main/default/objects/Exemption_Type__c/fields/RequiredEvidence__c.field-meta.xml
<CustomField>
    <fullName>RequiredEvidence__c</fullName>
    <label>Required Evidence</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>