force-app/main/default/objects/Exemption_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>IsCommercial__c</columns>
    <columns>Hint_Text__c</columns>
    <columns>RequiredEvidence__c</columns>
    <columns>AdditionalInformation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>